--- a/Episodio 24.html
+++ b/Episodio 24.html
@@ -26,7 +26,8 @@
     </nav>
   </header>
   <body>
-
+<font  background: #8B0000;
+  color: #008B8B;>
   <table width="100%" border="0" align="left" cellpadding="0" cellspacing="0" ">
   <tr><td><a href="../../index.php"></a> <a href="../../fe13.htm"></a>
   <h1>Cap&iacute;tulo 24: El Despertar </h1>
@@ -132,4 +133,5 @@
   </table>
 
 </b>
+                     </font>
   </body></html>
