--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <meta name="keywords" content="university, facultad, ingenieria, mecanica, electrica">
   <title>Fire Emblem:Awakening</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
+  <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
 </head>
 <body>
   <header>
 <!-- Paso 2-->
   <nav id="navbar">
     <div class="container">
-      <h1 class="logo" title="Fire Emblem Awakening"><a href="/index.html">Fire Emblem Awakening</a></h1>
+      <h1 class="logo" title="Fire Emblem Awakening"><a href="./index.html">Fire Emblem Awakening</a></h1>
       <ul>
-        <li><a class="current" href="/index.html">Inicio</a></li>
-        <li><a href="/about.html">Acerca de</a></li>
-        <li><a href="/about.html">Contacto</a></li>
-        <li><a href="/Episodio 24.html">Episodio 24</a></li>
+        <li><a class="current" href="./index.html">Inicio</a></li>
+        <li><a href="./about.html">Acerca de</a></li>
+        <li><a href="./about.html">Contacto</a></li>
+        <li><a href="./Episodio 24.html">Episodio 24</a></li>
       
       </ul>
     </div>
@@ -35,7 +35,7 @@
             <span class="text-primary"></span>Fire Emblem
           </h1>
 
-          <a href="about.html" class="btn">Acerca de Fire Emblem</a>
+          <a href="./about.html" class="btn">Acerca de Fire Emblem</a>
         </div>
       </div>
     </div>
