--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
   <header>
     <nav id="navbar">
       <div class="container">
-        <h1 class="logo" title="Fire Emblem Awakening"><a href="index.html">Fire Emblem Awakening</a></h1>
+        <h1 class="logo" title="Fire Emblem Awakening"><a href="./index.html">Fire Emblem Awakening</a></h1>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Acerca de</a></li>
-          <li><a class="current" href="contact.html">Contacto</a></li>
-            <li><a href="/videos.html">Videos</a></li>
-              <li><a href="/Episodio 24.html">Episodio 24</a></li>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./about.html">Acerca de</a></li>
+          <li><a class="current" href="./contact.html">Contacto</a></li>
+            <li><a href="./videos.html">Videos</a></li>
+              <li><a href="./Episodio 24.html">Episodio 24</a></li>
             
         </ul>
       </div>
