--- a/Episodio 24.html
+++ b/Episodio 24.html
@@ -7,20 +7,20 @@
   <meta name="keywords" content="university, facultad, ingenieria, mecanica, electrica">
   <title>Fire Emblem Awakening | Contact</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
+  <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
 </head>
 <body>
     <form action="alex-0097@hotmail.com" method="post" enctype="Text/plain">
   <header>
     <nav id="navbar">
       <div class="container">
-        <h1 class="logo" title="Fire Emblem Awakening"><a href="index.html">Fire Emblem Awakening</a></h1>
+        <h1 class="logo" title="Fire Emblem Awakening"><a href="./index.html">Fire Emblem Awakening</a></h1>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Acerca de</a></li>
-          <li><a href="contact.html">Contacto</a></li>
-            <li><a href="/videos.html">Videos</a></li>
-              <li><a  class="current" href="/Episodio 24.html">Episodio 24</a></li>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./about.html">Acerca de</a></li>
+          <li><a href="./contact.html">Contacto</a></li>
+            <li><a href="./videos.html">Videos</a></li>
+              <li><a  class="current" href="./Episodio 24.html">Episodio 24</a></li>
         </ul>
       </div>
     </nav>
@@ -32,7 +32,7 @@
   <tr><td><a href="../../index.php"></a> <a href="../../fe13.htm"></a>
   <h1>Cap&iacute;tulo 24: El Despertar </h1>
   (Awakening)
-  <div align="center"><img src="/imagenes/Imagen.png" width="899" height="652"></div>
+  <div align="center"><img src="../imagenes/Imagen.png" width="899" height="652"></div>
 
       <table width="100%"  border="0" cellspacing="0" cellpadding="0">
    <tr>
@@ -63,13 +63,13 @@
      </tr>
       </table>
       <div align="left">
-  <p><img src="/imagenes/firemblem6.jpg" width="176" height="176" class="imgs">&bull; Estrategia general:<br>
+  <p><img src="../imagenes/firemblem6.jpg" width="176" height="176" class="imgs">&bull; Estrategia general:<br>
     - Objetivo: Derrotar a todos.<br>
     - Unidades disponibles:
   Chrom + 14.
   <p> En este cap&iacute;tulo hay  solo unidades montadas. Obviamente armas efectivas contra estas clases sirven (Estoques, Beastkiller / Aterrafieras, magia viento contra los voladores, o martillos contra los Great Knight / Pesado). A&uacute;n si no fueras fuerte, forjar cualquiera de esas armas ayudar&aacute; mucho para derrotar a cualquier enemigo con casi cualquier personaje que est&eacute;s utilizando. <br>
     Y adem&aacute;s, desde el cap&iacute;tulo anterior que tenemos a Basilio quien posee el Rally Strenght / Potenciar: Fuerza. En cualquier dificultad e incluso en la m&aacute;s alta es una  ayuda para poder derrotar enemigos en dos golpes, &uacute;salo a&uacute;n si no ser&aacute; para derrotar enemigos.
-  <p>Tambi&eacute;n como ese Rally de Basilio sirve, tener alguien con el Rally Movement / Potenciar: Movimiento te ayudar&aacute; a atravesar los &aacute;rboles. Directamente los 2 que comiencen m&aacute;s abajo ven justamente imposible llegar a m&aacute;s de los enemigos cercanos debido a su falta de movimiento (a no ser que estuvieran en clases voladoras) pero con el +1 de ese Rally pueden llegar y derrotar a los enemigos cercanos en un turno, por ejemplo. Si no tienes un Rally utiliza unidades que <a href="../sistema-dual-y-doble.htm">agrupadas a otras den +1 de movimiento</a>.<br>
+  <p>Tambi&eacute;n como ese Rally de Basilio sirve, tener alguien con el Rally Movement / Potenciar: Movimiento te ayudar&aacute; a atravesar los &aacute;rboles. Directamente los 2 que comiencen m&aacute;s abajo ven justamente imposible llegar a m&aacute;s de los enemigos cercanos debido a su falta de movimiento (a no ser que estuvieran en clases voladoras) pero con el +1 de ese Rally pueden llegar y derrotar a los enemigos cercanos en un turno, por ejemplo. Si no tienes un Rally utiliza unidades que agrupadas a otras den +1 de movimiento.<br>
     Como deber&iacute;as saber ya, los bosques  tienen un costo de 2 de movimiento para unidades a pie, y los montados un costo de 3. Haci&eacute;ndoles complicado a los montados atravesar el terreno, y las clases voladoras podr&iacute;an ser algo d&eacute;biles a los arcos o ciertas magias, as&iacute; que tener m&aacute;s unidades a pie puede ser mejor, pero las voladoras podr&iacute;an por lo menos ayudarte a atravesar mejor el terreno si solo las usas como transporte agrup&aacute;ndoles alguien fuerte que deber&aacute; defender cierto lugar, intercambiando posiciones una vez los muevas.<br>
     Para defender estos lugares toma m&aacute;s en cuenta el mapa de la pantalla inferior. Sabiendo el costo de movimiento de 2 o 3 como explicado antes, puedes diferenciar los caminos que poder atravesar o d&oacute;nde poner a ciertas unidades, ya que marca los bosques m&aacute;s claramente. Y habiendo tantos montados a veces basta con una sola unidad para hacer de muralla, ya que podr&iacute;an no ponerse a los lados de &eacute;sta debido al costo de movimiento que les producen los &aacute;rboles.
   <p>Aparte de las armas efectivas, algunos enemigos pueden presentar problemas con que debes lidiar:<br>
@@ -86,7 +86,7 @@
       <td colspan="8" class="s">Jefe - Datos</td>
     </tr>
     <tr>
-      <td><img src="/imagenes/24.jpg" width="63" height="70"></td>
+      <td><img src="../imagenes/24.jpg" width="63" height="70"></td>
       <td colspan="8" rowspan="2" valign="top"><div align="left"> Armas y Objetos:<br>
         - Tomahawk (forjado en Lunatic, Poder 18, Golpe 80, Cr&iacute;t. 0).<br>
         - Bullion (M) / Saco de plata
