--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2>
               <span class="text-primary">Que mostraremos en esta pagina?</span>
             </h2>
-            <p>Estara enfocada en el juego Fire Emblem:Awakening considerado como el salvador de la franquicia debido a que los juegos empezaron a bajar de calidad y aparte de ser olvidada durante un tiempo hasta que saco el primer juego en la consola 3ds</p>
+            <p>Estara enfocada en el juego Fire Emblem:Awakening considerado como el salvador de la franquicia debido a que los juegos empezaron a bajar de calidad y aparte de ser olvidada durante un tiempo hasta que saco el primer juego en la consola 3ds, asi como una pequeña guia sobre como pasar el episodio 24 !</p>
 
           </div>
         </section>
