--- a/about.html
+++ b/about.html
@@ -9,19 +9,19 @@
   <meta name="keywords" content="university, facultad, ingenieria, mecanica, electrica">
   <title>Fire Emblem Awakening</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
+  <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
 </head>
 
   <header>
 <!-- Paso 2-->
   <nav id="navbar">
     <div class="container">
-      <h1 class="logo" title="Fire Emblem Awakening"><a href="/about.html">Fire Emblem Awakening</a></h1>
+      <h1 class="logo" title="Fire Emblem Awakening"><a href="./about.html">Fire Emblem Awakening</a></h1>
       <ul>
-        <li><a href="/index.html">Inicio</a></li>
-        <li><a class="current" href="/about.html">Acerca de</a></li>
-        <li><a href="/contact.html">Contacto</a></li>
-        <li><a href="/Episodio 24.html">Episodio 24</a></li>
+        <li><a href="./index.html">Inicio</a></li>
+        <li><a class="current" href="./about.html">Acerca de</a></li>
+        <li><a href="./contact.html">Contacto</a></li>
+        <li><a href="./Episodio 24.html">Episodio 24</a></li>
   
       </ul>
     </div>
@@ -34,7 +34,7 @@
         <p>En esta seccion encontraras una breve descripcion sobre los otros 2 juegos de Fire emblem que se encuentran en la consola 3ds!</p>
       </div>
       <div class="info-right">
-        <img src="/imagenes/firemblem3.jpg" alt="fime">
+        <img src="../imagenes/firemblem3.jpg" alt="fime">
       </div>
     </div>
   </section>
@@ -44,12 +44,12 @@
   <section id="testimonials" class="py-3">
     <div class="container">
       <div class="testimonial bg-primary">
-        <center><a href='/imagenes/fireemblem4.jpg' target="_blank"><img src="/imagenes/firemblem4.jpg" alt="Sam"></center>
+        <center><a href='../imagenes/fireemblem4.jpg' target="_blank"><img src="../imagenes/firemblem4.jpg" alt="Sam"></center>
 
         <p>El juego cuenta con dos facciones en guerra: Hoshido y Nohr. El personaje del jugador Corrin (Kamui カ ム イ?)​ - cuyo nombre, apariencia, y género puede ser personalizado - puede elegir ponerse del lado de cualquiera de ellos, lo que hace que la trama vaya en dos direcciones diferentes. Si el jugador elige el lado de Hoshido, el recorrido será similar a la de los anteriores juegos de Fire Emblem, teniendo el jugador que luchar en contra de la belicista Nohr; si se elige combatir junto a Nohr, el juego será mucho más difícil, requiriendo que el jugador revolucione el reino de Nohr desde el interior.​ Con posterioridad al anuncio de salida del juego, salió a la luz la existencia de otro camino adicional, Fire Emblem Fates: Revelación, en el cual el protagonista decide no apoyar ni a Nohr ni a Hoshido. Esta opción puede ser adquirida a modo de contenido adicional o con la compra de la edición especial del juego, en la cual se incluyen los tres caminos a elegir.</p>
       </div>
       <div class="testimonial bg-primary">
-      <center>  <a href='/imagenes/firemblem5.jpg' target="_blank"><img src="/imagenes/firemblem5.jpg" alt="Fem"> </center>
+      <center>  <a href='../imagenes/firemblem5.jpg' target="_blank"><img src="../imagenes/firemblem5.jpg" alt="Fem"> </center>
 
         <p>Hace mucho tiempo, los dioses hermanos Mila y Duma lucharon por el control del reino de Valentia. Al final, cada uno tomó una mitad del reino. En el sur, Mila formaría el Reino de Zofia, una tierra de abundancia. Sin embargo, con el tiempo se arruinó. En el norte, Duma forma el Imperio de Rigel, una tierra desolada. El juego sigue a Alm y Celica, amigos de la infancia que se separan para restaurar la paz de Valentia.</p>
       </div>
