--- a/Episodio 24.html
+++ b/Episodio 24.html
@@ -29,7 +29,7 @@
 <font  background: #8B0000;
   color: #008B8B;>
   <table width="100%" border="0" align="left" cellpadding="0" cellspacing="0" ">
-  <tr><td><a href="../../index.php"></a> <a href="../../fe13.htm"></a>
+
   <h1>Cap&iacute;tulo 24: El Despertar </h1>
   (Awakening)
   <div align="center"><img src="../imagenes/Imagen.png" width="899" height="652"></div>
@@ -47,7 +47,7 @@
           &#8226; Nuevos personajes:<br>
             - No hay.<br>
      </div></td>
-     <td  width="64%" valign="top"><div align="left">&#8226; Refuerzos enemigos:<<br>
+     <td  width="64%" valign="top"><div align="left">&#8226; Refuerzos enemigos:<br>
        - Turno 2, 3, 4, 5:<br>
        &nbsp;&nbsp;2 Wyvern Lord / Palad&iacute;n Wyvern (rojo).<br>
        &nbsp;&nbsp;1 Paladin / Palad&iacute;n (naranjo).<br>
