--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <p>En esta seccion encontraras una breve descripcion sobre los otros 2 juegos de Fire emblem que se encuentran en la consola 3ds!</p>
       </div>
       <div class="info-right">
-        <img src="../imagenes/firemblem3.jpg" alt="fime">
+        <img src="../imagenes/firemblem3.jpg">
       </div>
     </div>
   </section>
